# crewai-dev-assistant

./: .gitignore
dev-studio/: .gitignore  GLOBAL_RULES.md  pyproject.toml  pyrightconfig.json
dev-studio/src/dev_studio/: crew.py  main.py  models.py
dev-studio/src/dev_studio/api/: app.py  capture.py
dev-studio/src/dev_studio/config/: agents.yaml  tasks.yaml
dev-studio/src/dev_studio/tools/: compare_files_tool.py  diff_writer_tool.py  endpoint_verify_tool.py  grep_tool.py  patch_file_multi_tool.py  patch_file_tool.py  powershell_validator_tool.py  project_file_read_tool.py  project_memory_tool.py  project_scanner_tool.py  project_state_tool.py  test_runner_tool.py  typescript_validator_tool.py
dev-studio/src/dev_studio/utils/: env_loader.py  git_utils.py  settings.py
dev-studio/tools/: chocolateyinstall.ps1
dev_assistant/: GLOBAL_RULES.md  dev.ps1  pyproject.toml
dev_assistant/src/dev_assistant/: crew.py  main.py
dev_assistant/src/dev_assistant/config/: agents.yaml  tasks.yaml
dev_assistant/src/dev_assistant/dashboard/: app.py  capture.py
dev_assistant/src/dev_assistant/dashboard/templates/: index.html
dev_assistant/src/dev_assistant/tools/: approval_writer_tool.py  diff_writer_tool.py  git_log_tool.py  project_file_read_tool.py  smart_directory_tool.py  syntax_validator_tool.py
prompt-ui/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
prompt-ui/src/: index.html  styles.scss
prompt-ui/src/app/: app.ts  models.ts
prompt-ui/src/app/components/output-pane/: output-pane.ts  (+2 more)
prompt-ui/src/app/services/: api.ts  sse.ts
(+24 files in other folders)
