[project]
name = "dev_assistant"
version = "0.1.0"
description = "Dev Assistant crew for building Python, Angular, and .NET apps"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14.0,<2.0.0",
    "rich>=13.0.0",
    "flask>=3.0.0",
]

[project.scripts]
run_crew = "dev_assistant.main:run"
train_crew = "dev_assistant.main:train"
replay_crew = "dev_assistant.main:replay"
test_crew = "dev_assistant.main:test"
dashboard = "dev_assistant.dashboard.app:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
